# learn_opengl

./: CMakeLists.txt
Glad/: CMakeLists.txt  glad.c
rectangle/: .CMakeLists.txt.swp  CMakeLists.txt  rectangle.cpp
